--- a/로그인.html
+++ b/로그인.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="헤더푸터.css" />
+    <link rel="stylesheet" href="로그인.css" />
 </head>
 <body>
     <header class="mc6t" style="height:80px">
