--- a/헤더_기능추가_헤더만.html
+++ b/헤더_기능추가_헤더만.html
@@ -25,7 +25,7 @@
       <nav class="nav">
         <a href="#" class="heart-link"><i class="fas fa-heart"></i></a>
         <a href="#" class="login-button"><i class="fa-regular fa-user"></i>로그인</a>
-        <a href="#" class="mypage-button"><i class="fa-regular fa-user"></i>로그아웃</a>
+        <a href="#" class="mypage-button"><i class="fa-solid fa-right-from-bracket"></i></i>로그아웃</a>
       </nav>
     </header>
 
