--- a/마이페이지END.html
+++ b/마이페이지END.html
@@ -36,7 +36,7 @@
             </div>
             <div class="user-info">
                 <h2>회원 정보</h2>
-                <p>정보 수정은 불가능합니다.</p>
+                <p>에이콘스테이에 오신걸 환영합니다.</p>
                 <div class="info-box">
                     <div class="info-row">
                         <div class="info-item">
@@ -60,8 +60,8 @@
                     </div>
                     <div class="mypage-btn">
                         <div class="withdrawal-section">
-                            <button class="useredit-button">회원정보수정</button>
-                            <button class="withdrawal-button">회원탈퇴</button>
+                            <button class="useredit-button">비밀번호 변경</button>
+                            <button class="withdrawal-button">회원 탈퇴</button>
                         </div>
                         
                         
