--- a/html/예약내역END.html
+++ b/html/예약내역END.html
@@ -39,22 +39,32 @@
                 <div class="reservation-list">
                     <div class="reservation-item">
                         <div class="reservation-info">
-                            <p>숙소 이름: ???</p>
-                            <p>체크인: ****년 **월 **일</p>
-                            <p>체크아웃: ****년 **월 **일</p>
-                        </div>
-                        <a href="../html/예약상세페이지.html">
-                            <button class="details-button">상세 보기</button>
-                        </a>
-                    </div>
-                    <div class="reservation-item">
-                        <div class="reservation-info">
                             <p>숙소 이름: ????</p>
                             <p>체크인: ****년 **월 **일</p>
                             <p>체크아웃: ****년 **월 **일</p>
                         </div>
-                        <a href="../html/예약상세페이지.html">
+                        <a href="../html/예약상세페이지END.html">
                             <button class="details-button">상세 보기</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 구분선 -->
+            <hr class="divider">
+
+            <!-- 리뷰 쓰기 섹션 -->
+            <div class="review-section">
+                <h1 style="color: black;">이용 후 숙박내역</h1>
+                <div class="review-list">
+                    <div class="review-item">
+                        <div class="review-info">
+                            <p>숙소 이름: ???</p>
+                            <p>체크인: ****년 **월 **일</p>
+                            <p>체크아웃: ****년 **월 **일</p>
+                        </div>
+                        <a href="../html/리뷰페이지.html">
+                            <button class="review-button">리뷰 쓰기</button>
                         </a>
                     </div>
                 </div>
