--- a/html/예약내역END.html
+++ b/html/예약내역END.html
@@ -55,7 +55,7 @@
 
             <!-- 리뷰 쓰기 섹션 -->
             <div class="review-section">
-                <h1 style="color: black;">이용 후 숙박내역</h1>
+                <h1 style="color: black;">이용완료 및 예약취소</h1>
                 <div class="review-list">
                     <div class="review-item">
                         <div class="review-info">
